--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -151,6 +151,7 @@ a {
    padding: 5px;
    margin: 5px;
    display: inline-block;
+   color: black;
 }
 .tagBox > a:hover{
     background-color: rgba(246, 219, 164,0.6);
