--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -1,4 +1,4 @@
-<svg style="position: absolute; width:2vw; height:2vw; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg style="position: absolute; width:0vw; height:0vw; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
     <symbol id="icon-home" viewBox="0 0 1024 1024">
         <title>home</title>
@@ -17,7 +17,12 @@
         fill: black;
       }
     
-        
+      @media  (min-width : 320px) and (max-width : 480px) {
+        svg{   
+                width: 4vw;
+                height: 4vw;
+        }
+    }
     }
 
     </style>
