--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -230,8 +230,8 @@ blockquote {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
 .white-box{
     padding:0px;
