--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -1,4 +1,4 @@
-<svg style="position: absolute; width:0vw; height:0vw; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg style="position: absolute; width:0; height:0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
     <symbol id="icon-home" viewBox="0 0 1024 1024">
         <title>home</title>
