--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -1,4 +1,4 @@
-<svg style="width:2vw; height:2vw;" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+<svg  version="1.1" xmlns="http://www.w3.org/2000/svg" >
     <defs>
     <symbol id="icon-home" viewBox="0 0 1024 1024">
         <title>home</title>
