--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,25 @@
 <html>
   <head>
     <title>Antiblog</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
+    <script src="js/main.js"></script>
+    <style src="{{site.baseurl}}/js/post.js"></style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="ammap/ammap.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="ammap/ammap.css" type="text/css" media="all" />
+    <script src="ammap/maps/js/worldLow.js" type="text/javascript"></script>
   </head>
   <body>
     {{ content }}
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.12';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   </body>
 </html>
