--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,10 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
 <base href="{{ site.baseurl }}">
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"18a1deab68d88323607912764","lid":"dbaea1689b"}) })</script>
+{% if site.google_analytics %}
+  {% include google-analytics.html %}
+{% endif %}
   </head>
   <body>
     {{ content }}
