--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,6 +3,7 @@ layout: page
 permalink: /category/
 ---
 <head>
+                <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="{{ site.baseurl }}">
 </head>
