--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -238,7 +238,7 @@
 <script>
     if (window.innerWidth < 700) {
     var excerpt = document.getElementById("blogContainer");
-    excerpt.innerHTML = "{{ excerpt | truncatewords:15 }}";
+    excerpt.innerHTML = "{{ post.excerpt | truncatewords:15 }}";
     
 }
 </script>
