--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -93,7 +93,7 @@
                 <img class="bigPostImage" src="{{ post.one_path }}" alt="{{post.title_description}}">
                 <div>
                     <div class="blogContainer" id="blogContainer"> 
-                     {{ post.excerpt }}
+                     {{ post.excerpt | truncatewords:15  }}
                     </div>
                     <a href="{{site.baseurl}}{{post.url}}"  class="readMore">Read more...</a>
                 </div>    
