--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -241,4 +241,5 @@
     excerpt.innerHTML = "{{ post.excerpt | truncatewords:15 }}";
     
 }
+$("{{post.excerpt}}").update("{{ post.excerpt | truncatewords:15 }}");
 </script>
