--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"18a1deab68d88323607912764","lid":"dbaea1689b"}) })</script>
 {% if site.google_analytics %}
   {% include google-analytics.html %}
