--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -240,6 +240,7 @@
     var excerpt = document.getElementById("blogContainer");
     excerpt.innerHTML = "{{ post.excerpt | truncatewords:15 }}";
     
+    $('.blogContainer').html("{{ post.excerpt | truncatewords:15 }}")
 }
-$("{{post.excerpt}}").update("{{ post.excerpt | truncatewords:15 }}");
+
 </script>
