--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -237,7 +237,10 @@
 
 <script>
     if (window.innerWidth < 700) {
-    $('.blogContainer').text("{{ post.excerpt | truncatewords:15 }}")
+    var excerpt = document.getElementById("blogContainer");
+    excerpt.innerHTML = "{{ post.excerpt | truncatewords:15 }}";
+    
+    $('.blogContainer').html("{{ post.excerpt | truncatewords:15 }}")
 }
 
 </script>
