--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -240,7 +240,7 @@
     var excerpt = document.getElementById("blogContainer");
     excerpt.replace('{{ post.excerpt }}', '{{ post.excerpt | truncatewords:15 }}');
     
-    $('.blogContainer').html("{{ post.excerpt | truncatewords:15 }}")
+    //$('.blogContainer').html("{{ post.excerpt | truncatewords:15 }}")
 }
 
 </script>
